<resources>
    <string name="app_name">QAKHA Driver</string>
    <string name="back_again_to_exit">Back again to exit </string>
    <string name="play_services_did_not_installed">play services did not installed</string>
    <string name="enable_gps_service">Enable GPS Service</string>
    <string name="content_location">This app wants to change your device settings use GPS,Wi-Fi and cell networks for your location</string>
    <string name="turn_on">Turn On</string>
    <string name="title_sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="me">Me</string>
    <string name="what_do_you_want_to_eat">What do you want to eat?</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_cheap">Cheap</string>
    <string name="title_trend">Trend</string>
    <string name="title_more">More</string>
    <string name="today_promo">Today promote</string>
    <string name="view_more">View more</string>
    <string name="free_delivery" translatable="false">Free Delivery</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="title_review" translatable="false">Review</string>
    <string name="info" translatable="false">Info</string>
    <string name="title_sign_up">Sign up</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="title_continue">continue</string>
    <string name="find_your_account">Find Your Account</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_account">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in_sign_up">Sign in / Sign up</string>
    <string name="title_app" translatable="false">Food and Drink</string>
    <string name="label_currency" translatable="false">đ</string>
    <string name="sign_out">Sign out</string>
    <string name="top_sales">Top Sales</string>
    <string name="english">English</string>
    <string name="viet_nam">Việt Nam</string>
    <string name="change_language">Change Language</string>
    <string name="notifications">Notifications</string>
    <string name="vouchers">Vouchers</string>
    <string name="pay">Pay</string>
    <string name="address">Address</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="help_center">Help center</string>
    <string name="user_policy">User policy</string>
    <string name="settings">Settings</string>
    <string name="about_food_and_drink">About Application</string>
    <string name="discount">Discount</string>
    <string name="user_information">User information</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="easily_find_your_favorites_in_the_history_section">Easily find your favorites in the history section!</string>
    <string name="no_history_yet">No History Yet</string>
    <string name="title_food">Food #</string>
    <string name="complete">Complete</string>
    <string name="free_ship" translatable="false">FREESHIP</string>
    <string name="content_about_food_and_drink">The foods and drinks system helps users to search for products, order products and deliver them. Allows users to rate and comment on each product</string>
    <string name="this_is_application_for_user">This is application for user</string>
    <string name="you_have_signed_up_successfully">You have signed up successfully</string>
    <string name="default_amount" translatable="false">1</string>
    <string name="label_item">Item</string>
    <string name="default_price" translatable="false">0.0</string>
    <string name="order">Order</string>
    <string name="ongoing">Ongoing</string>
    <string name="title_no_order_yet">Orders confirmed, being prepared and shipped will all be displayed here for you to follow.</string>
    <string name="no_orders_yet">No Orders Yet</string>
    <string name="shipping">Shipping</string>
    <string name="checkout">Checkout</string>
    <string name="place_order">Place order</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="item_total">Item total</string>
    <string name="payment">Payment</string>
    <string name="my_bucket">My Bucket</string>
    <string name="add_items">Add items</string>
    <string name="new_delivery_address">New delivery address</string>
    <string name="deliver_to">Deliver to</string>
    <string name="keep_social_distancing_leave_your_order_on_the_doorstep">Keep social distancing, leave your order on the doorstep</string>
    <string name="find_item">Find item</string>
    <string name="add_cart">ADD TO CART</string>
    <string name="save">save</string>
    <string name="reset_password">Reset Password</string>
    <string name="invalid_field">Field is invalid</string>
    <string name="empty_field">"TextField must not be empty"</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="invalid_email_password_combination">Invalid email/password combination</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="invalid_phone">Phone number is invalid</string>
    <string name="short_phone">Phone number is too short (minimum is 10 characters)</string>
    <string name="update_success_profile">Update profile successful !!</string>
    <string name="not_found_product">No product found for result searching</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="favorite">Favorite</string>
    <string name="tab_product_order">Product Order</string>
    <string name="tab_review">Review</string>
    <string name="tab_information">Information</string>
    <string name="default_counter_cart" translatable="false">0</string>
    <string name="cart">Cart</string>
    <string name="clear">Clear</string>
    <string name="messenger_clear_cart">Do you want delete this cart</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="sign_up_success">Sign up success, please wait to confirm your account</string>
    <string name="you_cannot_sign_in_with_this_account">You cannot sign in with this account</string>
    <string name="description_validate_password">At least 6 characters, 1 uppercase - lowercase letter and a number</string>
    <string name="password_cant_be_blank">Password can\'t be blank</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="email_cant_be_blank">Email can\'t be blank</string>
    <string name="description_validate_confirmation_password">Password confirmation doesn\'t match Password</string>
    <string name="name_cant_be_blank">Name can\'t be blank</string>
    <string name="phone_number_is_too_short">Phone number is too short (minimum is 10 characters)</string>
    <string name="phone_number_is_invalid">Phone number is invalid</string>
    <string name="enter_security_code">Enter security code</string>
    <string name="enter_code">Security Code</string>
    <string name="please_check_your_emails_for_a_message_with_your_code_your_code_is_5_numbers_long">Please check your emails for a message with your code. Your code is 5 numbers long</string>
    <string name="title_new_password">Create a new password that is at least 6 characters, 1 uppercase letter, 1 lowercase letter and a number</string>
    <string name="choose_a_new_password">Choose a new password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">New password confirm</string>
    <string name="to_payment">To Pay</string>
    <string name="add_voucher">Add Voucher</string>
    <string name="paypal" translatable="false">PayPal</string>
    <string name="cash">Cash</string>
    <string name="verification_code">Verification code</string>
    <string name="email_is_already_exists_in_database">Email is already exists in database</string>
    <string name="Phone_umber_is_already_exists_in_database">Phone number is already exists in database</string>
    <string name="email_address_not_found_please_check_and_try_again">Email address not found. Please check and try again</string>
    <string name="token_not_present">Token not present</string>
    <string name="create_a_new_password_successfully">Create a new password successfully</string>
    <string name="code_not_valid_or_expired_try_generating_a_new_code">Code not valid or expired. Try generating a new code</string>
    <string name="generating_code">generating code</string>
    <string name="try_generating_a_new_code">Try generating a new code?</string>
    <string name="delivering_to">DELIVERING TO :</string>
    <string name="all">All</string>
    <string name="nearby">Nearby</string>
    <string name="best_rated">Best rated</string>
    <string name="detail">Detail</string>
    <string name="order_detail">Order detail</string>
    <string name="shipping_fee">Shipping fee</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="vnd">đ</string>
    <string name="feedback">Feedback</string>
    <string name="see_detail">See detail</string>
    <string name="your_order_is_being_delivered">Your order is being delivered…</string>
    <string name="identity_card">Identity card</string>
    <string name="license_plate">License plate</string>
    <string name="identity_card_cant_be_blank">Identity card can\'t be blank</string>
    <string name="identity_card_is_invalid">Identity card is invalid</string>
    <string name="license_plate_cant_be_blank">License plate can\'t be blank</string>
    <string name="license_plate_is_invalid">License plate is invalid, Ex: 43C1–12345</string>
    <string name="id_card_is_already_exists_in_database">Id card is already exists in database</string>
    <string name="license_plate_is_already_exists_in_database">License plate is already exists in database</string>
    <string name="bill">Bill</string>
    <string name="earnings">Earnings</string>
    <string name="foreground_service_channel">Foreground Service Channel</string>
    <string name="location_turned_on">"Location turned on "</string>
    <string name="have_a_nice_working_day">Have a nice working day</string>
    <string name="free_pick">Free-pick</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>
    <string name="delivery">Delivery</string>
    <string name="waiting_for_delivery">Waiting for delivery…</string>
    <string name="pickup">Pickup</string>
    <string name="title_pay">Pay:</string>
    <string name="delivery_confirmation">Delivery confirmation</string>
    <string name="make_sure_your_order_has_been_delivered_correctly">Make sure your order has been delivered correctly</string>
    <string name="content_offline_failure">Offline failure, check your delivery status</string>
    <string name="lets_start_working">Let\'s start working !!</string>
    <string name="fast_delivery">Fast delivery</string>
    <string name="finish_work">Finish work</string>
    <string name="do_you_want_to_end_work">Do you want to end work?</string>
    <string name="you_have_an_order_pending_delivery">You have an order pending delivery</string>
    <string name="please_deliver_the_goods_quickly">Please quickly deliver the goods to a customer</string>
    <string name="account_not_activated">Account not activated?</string>
    <string name="take_care_of_the_driver">Take care of the driver</string>
    <string name="quit_a_job">Quit a job</string>
</resources>